# TextRecognition

./: .gitignore  Dockerfile  Readme.txt  docker-compose.yml  pyproject.toml  readme.txt
Backend/: pyproject.toml
Backend/project/: recogniser.py
project/: main.py  parser.py  recogniser.py
project/static/: index.css  result.css  script.js
project/templates/: index.html  result.html
project/tests/: test_main.py
